cmake_minimum_required(VERSION 3.16)
project(CodingChallenge)

set(CMAKE_CXX_STANDARD 11)

add_executable(CodingChallenge main.cpp LeetCode/0001_Two_Sum.cpp LeetCode/0001_Two_Sum.h LeetCode/0002_Add_Two_Numbers.cpp LeetCode/0003_Longest_Substring_Without_Repeating_Characters.cpp LeetCode/0004_Median_of_Two_Sorted_Array.cpp LeetCode/0005_Longest_Palindromic_Substring.cpp BaekJoon/01977.cpp APSS/FESTIVAL.cpp APSS/MERCY.cpp APSS/ENDIANS.cpp APSS/DRAWRECT.cpp APSS/_sort_test.cpp)